--- a/style.css
+++ b/style.css
@@ -8,16 +8,22 @@
 header {
     background-color: #fff;
     min-height: 50px;
+
+}
+
+#logo {
+    margin: 0 20px 10px 50px;
+
 }
 
 img {
     float: left;
-    margin: 0 20px 10px 50px;
-    padding: 10 0;
+    margin-bottom: 10px;
 }
 
 body {
     background-color: #71ffcb;
+ 
 }
 
 
