--- a/style.css
+++ b/style.css
@@ -8,17 +8,32 @@
 header {
     background-color: #fff;
     min-height: 50px;
+    display: flex;
+    justify-content: space-between;
 
 }
 
 #logo {
-    margin: 0 20px 10px 50px;
+    margin: 0 0px 10px 50px;
 
 }
 
 img {
     float: left;
     margin-bottom: 10px;
+}
+
+#dropdown {
+    display: flex;
+    align-self: center;
+
+}
+
+#difficulty {
+    max-height: 20px;
+    width: 100px;
+    margin-right: 100px;
+    align-self: center;
 }
 
 body {
@@ -28,19 +43,19 @@ body {
 
 
 .container {
-    width: 500px;
+    width: 1000px;
     margin: 50px auto;
     border: solid 1px #000;
 
 
 }
 
-#grid {
-    height: 500px;
+#easy-grid {
+    height: 1000px;
 
 }
 
-#grid::after {
+#easy-grid::after {
     display: block;
     content: "";
     clear: both;
@@ -48,13 +63,15 @@ body {
 
 .square {
     border: solid 1px #000;
-    width: calc(100% / 8);
-    height: calc(100% / 8);
+    width: calc(100% / 10);
+    height: calc(100% / 10);
     float: left;
+    color: black;
+    font-size: 20px;
 }
 
 .clicked {
-    background-color: aquamarine;
+    background-color: #547ee9;
 } 
 
 
